# parse-cabal

./: README.md  all-cabals  parse-cabal.cabal
app/: Main.hs
cabals/: base.cabal  example-portaudio.cabal  ghc-prim.cabal  loadObject.cabal  naturalcomp-tests.cabal  picoparsec-benchmarks.cabal  redis-tests.cabal  yavie-gtk.cabal  yavie-vty.cabal  yavie-x11.cabal
src/: Lib.hs  PackageRank.hs  TarUtil.hs  TestRank.hs  TestTar.hs
