name:           base
version:        4.1.0.0
license:        BSD3
license-file:   LICENSE
maintainer:     lhc@haskell.org
synopsis:       Basic libraries
description:
    This package contains the Prelude and its support libraries,
    and a large collection of useful libraries ranging from data
    structures to parsing combinators and debugging utilities.
cabal-version:  >=1.2
build-type:     Simple

Library {
   extensions: CPP, NoImplicitPrelude, MagicHash
   build-depends: ghc-prim, integer-gmp
   ghc-options: -package-name base -fglasgow-exts
   include-dirs: includes/

   Exposed-modules:
--            Foreign.Concurrent,
            GHC.Arr,
            GHC.Base,
            GHC.Classes,
            GHC.Conc,
            GHC.ConsoleHandler,
--            GHC.Constants,
            GHC.Desugar,
            GHC.Enum,
            GHC.Environment,
            GHC.Err,
            GHC.Exception,
            GHC.Exts,
            GHC.Float,
            GHC.ForeignPtr,
            GHC.MVar,
            GHC.IO,
            GHC.IO.IOMode,
            GHC.IO.Buffer,
            GHC.IO.Device,
            GHC.IO.BufferedIO,
            GHC.IO.FD,
            GHC.IO.Exception,
            GHC.IO.Encoding,
            GHC.IO.Encoding.Latin1,
            GHC.IO.Encoding.UTF8,
            GHC.IO.Encoding.UTF16,
            GHC.IO.Encoding.UTF32,
            GHC.IO.Encoding.Types,
            GHC.IO.Encoding.Iconv,
            GHC.IO.Encoding.CodePage,
            GHC.IO.Handle,
            GHC.IO.Handle.Types,
            GHC.IO.Handle.Internals,
            GHC.IO.Handle.FD,
            GHC.IO.Handle.Text,
            GHC.IOBase,
            GHC.Handle,
            GHC.IORef,
            GHC.IOArray,
            GHC.Int,
            GHC.List,
            GHC.Num,
            GHC.PArr,
            GHC.Pack,
            GHC.Ptr,
            GHC.Read,
            GHC.Real,
            GHC.ST,
            GHC.STRef,
            GHC.Show,
            GHC.Stable,
            GHC.Storable,
            GHC.TopHandler,
            GHC.Unicode,
            GHC.Weak,
            GHC.Word,
--            System.Timeout,

        Control.Applicative,
        Control.Arrow,
        Control.Category,
--        Control.Concurrent,
--        Control.Concurrent.Chan,
--        Control.Concurrent.MVar,
--        Control.Concurrent.QSem,
--        Control.Concurrent.QSemN,
--        Control.Concurrent.SampleVar,
        Control.Exception,
        Control.Exception.Base
        Control.OldException,
        Control.Monad,
        Control.Monad.Fix,
        Control.Monad.Instances,
        Control.Monad.ST
        Control.Monad.ST.Lazy
        Control.Monad.ST.Strict
        Data.Bits,
        Data.Bool,
        Data.Char,
        Data.Complex,
        Data.Dynamic,
        Data.Either,
        Data.Eq,
        Data.Data,
        Data.Fixed,
        Data.Foldable
        Data.Function,
        Data.Functor,
        Data.HashTable,
        Data.IORef,
        Data.Int,
        Data.Ix,
        Data.List,
        Data.Maybe,
        Data.Monoid,
        Data.Ord,
        Data.Ratio,
        Data.STRef
        Data.STRef.Lazy
        Data.STRef.Strict
        Data.String,
        Data.Traversable
        Data.Tuple,
        Data.Typeable,
--        Data.Unique,
        Data.Version,
        Data.Word,
        Debug.Trace,
        Foreign,
        Foreign.C,
        Foreign.C.Error,
        Foreign.C.String,
        Foreign.C.Types,
        Foreign.ForeignPtr,
        Foreign.Marshal,
        Foreign.Marshal.Alloc,
        Foreign.Marshal.Array,
        Foreign.Marshal.Error,
        Foreign.Marshal.Pool,
        Foreign.Marshal.Utils,
        Foreign.Ptr,
        Foreign.StablePtr,
        Foreign.Storable,
        Numeric,
        Prelude,
--        System.Info
        System.Console.GetOpt
--        System.CPUTime,
        System.Environment,
        System.Exit,
        System.IO,
        System.IO.Error,
        System.IO.Unsafe,
        System.Mem,
        System.Mem.StableName,
        System.Mem.Weak,
        System.Posix.Internals,
        System.Posix.Types,
        Text.ParserCombinators.ReadP,
        Text.ParserCombinators.ReadPrec,
        Text.Printf,
        Text.Read,
        Text.Read.Lex,
        Text.Show,
        Text.Show.Functions
        Unsafe.Coerce

   Hs-source-dirs: src
}
