name:          naturalcomp-tests
version:       0
build-type:    Simple
cabal-version: >= 1.6

executable nctest
  main-is:        nctest.hs
  ghc-options:    -Wall
  hs-source-dirs: ../,.
  build-depends:  base >= 4 && < 5, HUnit, text, utf8-string

executable colltest
  main-is:        colltest.hs
  ghc-options:    -Wall
  hs-source-dirs: ../,.
  build-depends:  base >= 4 && < 5, HUnit, rfc5051
